--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>تحدي الكورة | مصري</title>
-  <style>
+<link rel="manifest" href="manifest.json">
+<style>
     :root{
       --bg1:#040b08; --bg2:#071a12; --card:rgba(255,255,255,.06);
       --stroke:rgba(255,255,255,.12); --text:#eafff2; --muted:#b7d9c8;
